added some DOM manipulation

--- a/index.html
+++ b/index.html
@@ -12,16 +12,26 @@
 <body>
     <div id="wrap">
         <div id="main" class="container clear-top">
+            
+            <div class="row">
+                <header class="col-12"><h1>Trivial Matters</h1></header>
+            </div>
+
+            <div id="main-area" class="row">
 
         
-            <header><h1>Trivial Matters</h1></header>
+                <section id="timer-space" class="col-12">content</section>
 
-            <section id="timer-space">content</section>
+                <section id="question" class="col-12">content</section>
 
-            <section id="question">content</section>
+                <section id="choices-column" class="col-12">content</section>
 
-            <section id="choices-column">content</section>
 
+            </div>
+
+            <div id="status-update" class="row">
+
+            </div>
 
         </div>
     </div>
