added slot randomizer for wrong answers and right answer

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div id="main-area" class="row">
 
         
-                <section id="timer-space" class="col-12">content</section>
+                <section id="timer-space" class="col-12"></section>
 
-                <section id="question" class="col-12">content</section>
+                <section id="question" class="col-12"></section>
 
-                <section id="choices-column" class="col-12">content</section>
+                <section id="choices-column" class="col-12"></section>
 
 
             </div>
