added some questions and improved some functionality

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div id="main" class="container clear-top">
             
             <div class="row">
-                <header class="col-12 text-white text-center"><h1 class="hstyles">Trivial Matters</h1></header>
+                <header class="col-12 text-white text-center"><h1 class="hstyles">Persona 4 Trivia!</h1></header>
             </div>
 
-            <div class="main-area-bg">
+            <div class="main-area-bg mx-auto">
                 <div class="container cust-faded-bg cstyles">
 
                     <div id="main-area" class="row justify-content-center text-center">
@@ -43,6 +43,10 @@
     <footer class="footer">
         <p>Placeholder</p>
     </footer>
+
+    <audio id="velvet-room" controls loop>
+            <source src="assets/sounds/Velvet-Room.mp3" type="audio/mpeg">
+    </audio>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
